# LVGL-Bohinj

./: CMakeLists.txt  README.md
config/: lv_conf.h  lv_drv_conf.h
fonts/: montserrat_bold_40.c  montserrat_regular_40.c
include/: imgfont_loader.hpp
src/: imgfont_loader.cpp  main.cpp
